tests/negative/neg_own_borrow_conflict.safe
-- Test: neg_own_borrow_conflict
-- Description: Passing the same root object to a `mut` parameter and another actual.
-- Expected: REJECT mut_alias_conflict

package borrow_conflict_test

   type data is record
      value : integer
      next : data

   function touch (left : mut data; right : data)
      return

   function modify_both
      owner : not null data = (value = 10, next = null)

      touch (owner, owner)  -- ERROR: same-root alias in one call
